// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bug 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "statements ✍: 83.33 % 🧱 branches 🎋: 100 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 83.33 %",
        "hasDecorations": false,
        "newDecorations": undefined,
        "secondBarMessage": "☔10",
        "thirdBarMessage": "_modules/format-json.spec.js",
      },
    ],
  ],
  "linted": Array [],
}
`;

exports[`happy scenario 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "2",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/both-have-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "9",
            "number",
          ],
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "NO CHANGE ☄ ✍: 100 % ☄ 🎋: 50 % ☄ 🕸: 100 % ☄ 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "5": "{ a: 1, b: 2 }",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/both-have-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "9",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/file-has-logs.spec.js",
      },
    ],
  ],
  "linted": Array [],
}
`;

exports[`parallel scenario 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "[ 1, 2, 3 ] { a: 1, b: 2 }",
            "1",
          ],
        },
        "secondBarMessage": "☔2",
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "NO CHANGE ☄ ✍: 100 % ☄ 🎋: 50 % ☄ 🕸: 100 % ☄ 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "2",
            "number",
            "{ a: 1, b: 2 }",
          ],
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "9",
            "number",
          ],
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "9",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
            "8": "1",
          },
        },
        "secondBarMessage": "☔2",
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
  ],
  "linted": Array [],
}
`;
